# director-pytorch

./: .flake8  Dockerfile  README.md  docker-compose.yml  pomdp.py  pyproject.toml
director/: actor.py  config.py  goal_autoencoder.py  log.py  manager.py  policy.py  replay_buffer.py  trainer.py  utils.py
experiment/: breakout.yaml  sokoban.yaml
