[tool.poetry]
name = "director"
version = "0.1.0"
description = ""
authors = ["Aleksi Tella <aleksi.tella@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dreamerv2 = {git = "ssh://git@github.com/RajGhugare19/dreamerv2.git"}


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
